# iamge_labeltool

./: .gitignore  CMakeLists.txt  cvui.h  main.cpp  readme.txt
image_labels/: 000019.txt
